# Quote-Analyzer

./: README.md  dump.csv  lol.csv  main.py  pyproject.toml  select_sorted.py  test.py
Cache/: open5pop1.csv
