[tool.poetry]
name = "kursproject2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
get-sorted = "select_sorted:get_sorted"
get-banch = "main:get_banch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
